fix spacing

--- a/assets/scss/_sections/_section1.scss
+++ b/assets/scss/_sections/_section1.scss
@@ -277,8 +277,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: $spacer-2;
-    justify-content: flex-start;
+    justify-content: space-between;
     overflow: visible;
 
     & .stack {
